# class_activation_mapping

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cam/: __init__.py  __main__.py  ablation_cam.py  base_cam.py  cam.py  cnn.py  dummy_cam.py  grad_cam.py  grad_cam_pp.py  libs_cam.py  lime_image.py  score_cam.py  smooth_grad_cam_pp.py  utils.py  vanilla_cam.py
cam/backbones/: __init__.py  backbone.py  mobilenet_v3.py  resnet.py  vgg.py
cam/base/: __init__.py  acquired.py  activation_weight.py  base_cam.py  channel_smaps.py  channel_weight.py  containers.py  context.py  final_smap.py  layer_weight.py  network.py  network_weight.py  position_smaps.py  raw_smaps.py
cam/lime/: __init__.py  image.py
cam/models/: __init__.py  ablation_cam.py  cluster_cam.py  cosine_cam.py  dummy_cam.py  eigen_cam.py  eigengrad_cam.py  fake_cam.py  grad_cam.py  grad_cam_pp.py  group_cam.py  hires_cam.py  integrad_cam.py  layer_cam.py  mobilenet_v3.py  poly_cam.py  score_cam.py  smooth_grad_cam_pp.py  vanilla_cam.py  xgrad_cam.py
cam/utils/: display.py
class_activation_mapping/: __init__.py
docs/: Makefile
docs/source/: conf.py  index.rst
ipynb/: cam.drawio  usage.ipynb
